--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bundle": "webpack",
-    "dev": "webpack-dev-server --host 10.8.6.6 --port 80"
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
