--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "bundle": "webpack",
-    "dev": "webpack-dev-server --host static.dongfangfuli.com --port 80 --open --progress --color"
+    "dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
